--- a/medical-front-end/project/src/assets/css/theme.css
+++ b/medical-front-end/project/src/assets/css/theme.css
@@ -1286,7 +1286,7 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 32px;
 }
 
-#doctorSlideshow .owl-nav {
+#doctorSlideshow .owl-nav ,#doctorSlideshow2 .owl-nav{
   margin-top: 24px;
 }
 
@@ -1300,6 +1300,8 @@ a.text-dark:hover, a.text-dark:focus {
   box-shadow: 0 2px 6px rgba(154, 159, 151, 0.2);
   overflow: hidden;
 }
+
+
 
 .card-doctor .text-xl {
   font-weight: 500;
