--- a/medical-front-end/project/src/app/components/search/search.component.html
+++ b/medical-front-end/project/src/app/components/search/search.component.html
@@ -2,22 +2,24 @@
   <div class="bg-light rounded p-3 ">
      <div class="row p-2 ">
         <div class="col-2">
-            <p class="text-center">doctor name</p>
-            <input class="form-control bg-danger " type="button" value="search" style="height:38px;"/>
+            <p class="text-center text-white">doctor name</p>
+           <!-- <input class="form-control bg-danger" (click)="search()" value="search" style="height:38px;"/>-->
+           <a class="btn btn-danger" routerLink="/doctors" [queryParams]="{name:searchObj.doctorName,spec:searchObj.doctorSpecialist,gov:searchObj.doctorGovernerate,area:-1}">search</a>
+
            </div>
 
            <div class="col-3">
             <p class="text-center">Specialist</p>
-            <select class="form-select">
-                <option>Choose Specialist</option>
+            <select class="form-select" [(ngModel)]="searchObj.doctorSpecialist">
+                <option value="-1">Choose Specialist</option>
             </select>
 
            </div>
 
            <div class="col-3">
             <p class="text-center">Governerate</p>
-            <select class="form-select">
-                <option>Governerate</option>
+            <select class="form-select"[(ngModel)]="searchObj.doctorGovernerate">
+                <option value="-1">Governerate</option>
             </select>
 
            </div>
@@ -33,7 +35,8 @@
 
            <div class="col-2">
             <p class="text-center">doctor name</p>
-            <input class="form-control" type="text" style="height:38px;"/>
+          
+           <input class="form-control" type="text" style="height:38px;" [(ngModel)]="searchObj.doctorName"/>
            </div>
      </div>
 
@@ -43,3 +46,4 @@
 
   </div>
 </div>
+
